--- a/templates/search.html
+++ b/templates/search.html
@@ -455,12 +455,13 @@
     <h2>Categories</h2>
     <div class="category-list">
 
-        <a href="{{ url_for('beverages') }}" class="category-link">
-            <div class="cat-item">
-                <img src="{{ url_for('static', filename='images/categories/bakery.jpg') }}" alt="beverages">
-                 </a>
+       <a href="{{ url_for('beverages') }}" class="category-link">
+    <div class="cat-item">
+        <img src="{{ url_for('static', filename='images/categories/beverages.jpg') }}" alt="Beverages"></a>
+        <p>Beverages</p>
+    </div>
 
-                <p>beverages</p>
+
             </div>
        
         <a href="{{ url_for('daily_deals') }}" class="category-link">
