--- a/templates/search.html
+++ b/templates/search.html
@@ -454,13 +454,12 @@
    <section class="categories">
     <h2>Categories</h2>
     <div class="category-list">
-
-       <a href="{{ url_for('beverages') }}" class="category-link">
+<a href="{{ url_for('beverages') }}">
     <div class="cat-item">
-        <img src="{{ url_for('static', filename='images/categories/beverages.jpg') }}" alt="Beverages"></a>
+        <img src="{{ url_for('static', filename='images/categories/beverages.jpg') }}" alt="Beverages">
         <p>Beverages</p>
     </div>
-
+</a>
 
             </div>
        
