new change pages

--- a/templates/frozenPage.html
+++ b/templates/frozenPage.html
@@ -15,13 +15,13 @@ h1 { text-align:center; margin:20px 0; }
 </head>
 <body>
 
-<h1>Frozen</h1>
+<h1>Grocery</h1>
 
 <div class="product-grid">
 
 <a href="{{ url_for('product_detail', product_id=501) }}" class="product-link">
 <div class="product-card">
-<img src="{{ url_for('static', filename='images/product/grocery1.png') }}">
+<img src="{{ url_for('static', filename='images/product/image.png') }}">
 <div class="product-name">Rice 5kg</div>
 <div class="product-price">Rs.1200.00</div>
 </div>
