--- a/templates/grocery.html
+++ b/templates/grocery.html
@@ -29,7 +29,7 @@ h1 { text-align:center; margin:20px 0; }
 
 <a href="{{ url_for('product_detail', product_id=502) }}" class="product-link">
 <div class="product-card">
-<img src="{{ url_for('static', filename='images/product/grocery2.png') }}">
+<img src="{{ url_for('static', filename='images/product/flour.jpg') }}">
 <div class="product-name">Flour 2kg</div>
 <div class="product-price">Rs.400.00</div>
 </div>
@@ -37,15 +37,15 @@ h1 { text-align:center; margin:20px 0; }
 
 <a href="{{ url_for('product_detail', product_id=503) }}" class="product-link">
 <div class="product-card">
-<img src="{{ url_for('static', filename='images/product/grocery3.png') }}">
-<div class="product-name">Sugar 2kg</div>
-<div class="product-price">Rs.450.00</div>
+<img src="{{ url_for('static', filename='images/product/sugar.jpeg') }}">
+<div class="product-name">Sugar 1kg</div>
+<div class="product-price">Rs.295.00</div>
 </div>
 </a>
 
 <a href="{{ url_for('product_detail', product_id=504) }}" class="product-link">
 <div class="product-card">
-<img src="{{ url_for('static', filename='images/product/grocery4.png') }}">
+<img src="{{ url_for('static', filename='images/product/salt.jpg') }}">
 <div class="product-name">Salt 1kg</div>
 <div class="product-price">Rs.120.00</div>
 </div>
@@ -53,7 +53,7 @@ h1 { text-align:center; margin:20px 0; }
 
 <a href="{{ url_for('product_detail', product_id=505) }}" class="product-link">
 <div class="product-card">
-<img src="{{ url_for('static', filename='images/product/grocery5.png') }}">
+<img src="{{ url_for('static', filename='images/product/cookingOil.jpg') }}">
 <div class="product-name">Cooking Oil 1L</div>
 <div class="product-price">Rs.900.00</div>
 </div>
@@ -61,7 +61,7 @@ h1 { text-align:center; margin:20px 0; }
 
 <a href="{{ url_for('product_detail', product_id=506) }}" class="product-link">
 <div class="product-card">
-<img src="{{ url_for('static', filename='images/product/grocery6.png') }}">
+<img src="{{ url_for('static', filename='images/product/lentils.jpg') }}">
 <div class="product-name">Lentils 1kg</div>
 <div class="product-price">Rs.600.00</div>
 </div>
@@ -69,7 +69,7 @@ h1 { text-align:center; margin:20px 0; }
 
 <a href="{{ url_for('product_detail', product_id=507) }}" class="product-link">
 <div class="product-card">
-<img src="{{ url_for('static', filename='images/product/grocery7.png') }}">
+<img src="{{ url_for('static', filename='images/product/chiliPowder.jpg') }}">
 <div class="product-name">Chili Powder 250g</div>
 <div class="product-price">Rs.250.00</div>
 </div>
