--- a/templates/grocery.html
+++ b/templates/grocery.html
@@ -77,7 +77,7 @@ h1 { text-align:center; margin:20px 0; }
 
 <a href="{{ url_for('product_detail', product_id=508) }}" class="product-link">
 <div class="product-card">
-<img src="{{ url_for('static', filename='images/product/grocery8.png') }}">
+<img src="{{ url_for('static', filename='images/product/turmeric.jpg') }}">
 <div class="product-name">Turmeric Powder 250g</div>
 <div class="product-price">Rs.200.00</div>
 </div>
@@ -85,7 +85,7 @@ h1 { text-align:center; margin:20px 0; }
 
 <a href="{{ url_for('product_detail', product_id=509) }}" class="product-link">
 <div class="product-card">
-<img src="{{ url_for('static', filename='images/product/grocery9.png') }}">
+<img src="{{ url_for('static', filename='images/product/coconutmilk.jpg') }}">
 <div class="product-name">Coconut Milk 400ml</div>
 <div class="product-price">Rs.350.00</div>
 </div>
@@ -93,7 +93,7 @@ h1 { text-align:center; margin:20px 0; }
 
 <a href="{{ url_for('product_detail', product_id=510) }}" class="product-link">
 <div class="product-card">
-<img src="{{ url_for('static', filename='images/product/grocery10.png') }}">
+<img src="{{ url_for('static', filename='images/product/tomato.jpg') }}">
 <div class="product-name">Tomato Paste 200g</div>
 <div class="product-price">Rs.180.00</div>
 </div>
