--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -115,7 +115,10 @@ body { font-family: Arial, sans-serif; background: #f7f7f7; margin:0; padding:0;
 <!-- PRODUCT DETAILS -->
 <section class="product-details">
   <div class="product-gallery">
-    <img src="{{ url_for('static', filename=product['image_url']) }}" alt="{{ product['name'] }}" width="200">
+          <img src="{{ url_for('static', filename=product['image_url']) }}"
+     alt="{{ product['name'] }}" width="200">
+
+
   </div>
 
   <div class="product-info">
